# phi-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI-REFERENCE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: phi
.github/workflows/: ci.yml  publish.yml
biomodals/: TEMPLATE_NEW_BIOMODAL.py  __init__.py  base.py  modal_af2rank.py  modal_align_structures.py  modal_alphafold.py  modal_bindcraft.py  modal_boltz.py  modal_boltzgen.py  modal_chai1.py  modal_esm2_predict_masked.py  modal_esmfold.py  modal_ligandmpnn.py  modal_proteinmpnn.py  modal_rf3.py  modal_rfdiffusion3.py  modal_rso.py  modal_tm_score.py
biomodals/utils/: __init__.py  extract_chain_as_mol2.py  extract_ligands.py
examples/: README.md
phi-plugin/: README.md
phi-plugin/.claude-plugin/: plugin.json
skills/phi/: SKILL.md
src/phi/: __init__.py  api.py  cli.py  config.py  display.py  download.py  parser.py  polling.py  research.py  structure.py  types.py  upload.py
src/phi/commands/: auth.py  datasets.py  filter.py  jobs.py  models.py  research.py  structure.py  tutorial.py
tests/: test_api.py  test_config.py  test_display.py  test_download.py  test_research.py  test_structure.py  test_upload.py
