[project]
name = "dyno-phi"
dynamic = ["version"]
description = "Phi CLI and biomodals for the dyno protein design platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Dyno Therapeutics" },
]
keywords = ["protein-design", "bioinformatics", "cli", "alphafold", "esmfold", "proteinmpnn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# CLI only requires rich + stdlib
dependencies = [
    "rich>=14.0",
]

[project.optional-dependencies]
# Install when deploying or developing biomodals locally
biomodals = [
    "modal>=0.69.0",
    "google-cloud-storage>=2.18.0",
    "requests>=2.32.0",
    "pydantic>=2.0",
    "biopython>=1.81",
    "biotite>=1.0.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
phi = "phi.cli:main"

[project.urls]
Homepage = "https://dynotx.com"
Repository = "https://github.com/dyno-tx/phi-cli"
Issues = "https://github.com/dyno-tx/phi-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/phi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/phi", "biomodals"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # allow raising without from
]

[tool.ruff.lint.per-file-ignores]
# Biomodals run inside Modal GPU containers. They use older patterns (percent
# formatting, bare open(), zip() without strict=) that are intentional and
# safe in that context. E402 is expected (late imports inside Modal entrypoints).
"biomodals/*.py" = ["E402", "SIM115", "B905", "UP031", "UP038", "SIM108", "B007", "W293"]

# ── MyPy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

# Biomodals run in Modal GPU containers with many third-party libs that lack
# stubs.  Relax the strict rules that apply to src/phi/ so we only enforce what
# matters locally: missing imports are already suppressed globally.
[[tool.mypy.overrides]]
module = ["biomodals", "biomodals.*", "biomodals.utils", "biomodals.utils.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
ignore_missing_imports = true
disable_error_code = ["import-untyped", "call-arg", "arg-type"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
